crates/sui-prover/tests/snapshots/quantifiers/partial_pattern_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Invalid quantifier macro pattern: expected a lambda function, but found an inlined expression
  ┌─ tests/../../../packages/prover/sources/vector.move:9:1
  │
9 │ public native fun begin_map_lambda<T>(v: &vector<T>): &T;
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid quantifier macro pattern: expected a lambda function, but found an inlined expression
   ┌─ tests/../../../packages/prover/sources/prover.move:78:1
   │
78 │ public native fun begin_exists_lambda<T>(): &T;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid quantifier macro pattern: expected a lambda function, but found an inlined expression
   ┌─ tests/../../../packages/prover/sources/prover.move:74:1
   │
74 │ public native fun begin_forall_lambda<T>(): &T;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
